--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+APScheduler==3.10.4
 blinker==1.7.0
 certifi==2023.11.17
 charset-normalizer==3.3.2
@@ -8,7 +9,10 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 python-dotenv==1.0.0
+pytz==2023.3.post1
 requests==2.31.0
 schedule==1.2.1
+six==1.16.0
+tzlocal==5.2
 urllib3==2.1.0
 Werkzeug==3.0.1
