--- a/example.env
+++ b/example.env
@@ -2,3 +2,4 @@ NGINX_CONF_PATH="nginx-sites-enabled"
 ENV="dev"
 ADMIN_PASSWORD="ok"
 SITE_HOST_IP="14.139.34.11"
+WEBHOOK_URL="https://discord.com/api/webhooks/1192917462052786307/TIx4Vk-auZzW8a4QFaUUxez7AM37OpfGA05uMH_yirRwWLbWZGi6JsW0_BaLx-xcBBq5"
